--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body a{
 	font-size: 17px;
 	text-align: center;
 	position: relative;
+	font-family:微软雅黑;
 	font-weight: 400;
 	text-decoration: none;
 	padding: 0px 19px 0px 19px;
